[package]
name = "multi-img-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.10", features = ["derive"] }
colored = "2.0.0"
reqwest = "0.11.18"
tokio = { version = "1.29.1", features = ["full"] }
